# RealTime-IBI-BP

./: .cursorrules  .gitignore  Abstract_SinBP.md  BP_Calculation_Flow.md  BP_MAPE_Evaluation_Methods.md  IMPLEMENTATION_COMPLETE.md  PHASE_WARP_IMPROVEMENT_ANALYSIS.md  README.md  README_FILE_SYNC.md  SINE_BP_FINAL_REVIEW.md  SINE_BP_IMPLEMENTATION.md  build.gradle  settings.gradle  sync_files_from_android.py  sync_files_from_android.sh  train.zsh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nakazawarealtimehr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/realtimehribicontrol/: BaseLogic.java  DQNAgent.java  ExperienceReplayBuffer.java  GreenValueAnalyzer.java  Logic1.java  (+18 more)
app/src/main/res/animator/: btn_elevation.xml
app/src/main/res/drawable/: bg_animated_button.xml  bg_camera_hole_marker.xml  bg_edit_text.xml  bg_landing_zone.xml  bg_phase_panel.xml  bg_signal_quality_indicator.xml  bg_touch_ring.xml  gradient_background.xml  progress_flat_cyan.xml  progress_flat_green.xml
app/src/main/res/layout/: activity_main.xml  activity_pressure_analyze.xml  fragment_mode_selection.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/raw/: base.mid  bass.mid  drum.mid  musica.mid  musicb.mid  musicc.mid  musicd.mid  realtime_bp_coefficients.json  rock1.mid  rock2.mid
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nakazawarealtimehr/: ExampleUnitTest.java
(+346 files in other folders)
